Add some HTML structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<<h1>hello, world</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Home</title>
+  </head>
+  <body>
+    <h1>Hello planet Earth</h1>
+
+    <p>Call me Marvin</p>
+  </body>
+</html>
