--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <h1>Hello planet Earth</h1>
 
-    <p>Call me Marvin</p>
+    <p>Call me Moby</p>
+    <img src="images/breaching_whale.jpg">
   </body>
 </html>
